mdapipkg/unpackaged/objects/Fortnite_API_Cache__c.object
<CustomObject>
    <fields>
        <fullName>Cache_Key__c</fullName>
        <description>A key created by the app to allow for refresh, etc.</description>
        <label>Cache Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The type of cached data (player, store, etc.)</description>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>body__c</fullName>
        <label>body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>url__c</fullName>
        <label>url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Fortnite API Cache</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Cache_Key__c</columns>
        <columns>Type__c</columns>
        <columns>body__c</columns>
        <columns>url__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Fortnite API Cache Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fortnite API Cache</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>